--- a/Client/productStyle.css
+++ b/Client/productStyle.css
@@ -84,7 +84,7 @@ h1 {
     margin-top: 10%;
     display: flex;
     justify-content: center;
-    align-items: flex-start; 
+    align-items: center; 
     flex-direction: row; 
     word-wrap: normal;
 }
@@ -92,39 +92,68 @@ h1 {
 .productImage {
     object-fit: cover;
     width: 320px;
-    height: 400px;
+    height: 625px;
     margin-right: 10rem; /* Add margin between image and text */
 }
 
 .productText {
-    max-width: 350px; 
+    max-width: 450px; 
     display: flex;
     flex-direction: column;
     word-wrap: normal;
 }
 
-h2 {
-    margin-bottom: 10px;
-}
 
 #addToCartButton {
+    max-width: 200px;
     margin-top: 2rem;
-    max-width: 8rem;
     padding-right: 10px;
     padding-left: 10px;
-    padding-top: 9px;
-    padding-bottom: 6px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     font-family: "EB Garamond", serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     justify-content: center;
     align-items: center;
+    background-color: #6d5f43;
+    border-style: none;
+    font-size: 14px;
 }
 
 
-.product, .productText, .productImage {
-    margin-top: 5rem;
-    justify-content: center;
-    align-content: center;
+.product-details {
+    margin: 0 20% auto;
+
+}
+
+.shortDesc {
+    font-size: 15px;
+    text-transform:uppercase;
+    color: #7d6d4a;
+    margin-top: 10px;
+}
+
+p {
+    font-weight: 400;
+    font-size: 16px;
+    margin-top: 0;
+    margin-bottom: 10px;
+    color: #7d6d4a;
+
+}
+
+h2 {
+    font-size: 22px;
+    font-family: "EB Garamond", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    top: 22%;
+    margin-bottom: 10px;
+}
+
+.desc {
+    max-width: 350px;
 }
